--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "homepage": "https://github.com/digithree/markpage-server",
   "dependencies": {
     "body-parser": "^1.13.3",
-    "express": "^4.13.3",
+    "express": "^4.13.3"
   }
 }
