--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/digithree/markpage-server",
   "dependencies": {
     "body-parser": "^1.13.3",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "unfluff": "1.1.0",
+    "btoa": "^1.1.2"
   }
 }
