--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "unfluff": "1.1.0",
-    "btoa": "^1.1.2"
+    "atob": "^2.0.3"
   }
 }
