--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "unfluff": "1.1.0",
-    "atob": "^2.0.3"
+    "atob": "^2.0.3",
+    "node-fetch": "^1.6.3"
   }
 }
