--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.13.3",
     "unfluff": "1.1.0",
     "atob": "^2.0.3",
+    "btoa": "^1.1.2",
     "node-fetch": "^1.6.3"
   }
 }
